@@ -4,6 +4,8 @@
 	* Makefile.am: Use AM_CFLAGS instead of CFLAGS.
 	* convert.c, main.c: Add include.
 	* multi.c: Check for sane input, initialise socklen_t before use.
+	* gfp.h, history.c, interface.c, logic.c, main.c: Use ints instead of
+	chars for most types.
 
 0.25 (January 14 2000): A small bug fix.
 * Removed a memory leak reported as Debian bug #50140 by Daniel Burrows.
